--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
     <div>
         <div class="movies">   
             <div class="m">
-                <img src="images/action.htm" alt="">
+                <img src="action.htm" alt="">
                 <h4>ACTION</h4>
                 <a href="action.html" target="_blank">
                     <button id="over" >show</button>            
                 </a>
             </div>
             <div class="m">
-                <img src="images/horror.jpeg" alt="">
+                <img src="horror.jpeg" alt="">
                 <h4>HORROR</h4>
                 <a href="horror.html" target="_blank">
                     <button id="ver">show</button>       
                 </a>
             </div>
         <div class="m">
-            <img src="images/comedy.jpg" alt="">
+            <img src="comedy.jpg" alt="">
             <h4>COMEDY</h4>
             <a href="comidy.html" target="_blank">
                 <button>show</button>       
             </a>
         </div>
             <div class="m">
-                <img src="images/drama.jpeg" alt="">
+                <img src="drama.jpeg" alt="">
                 <h4>DRAMA</h4>
                 <a href="drama.html" target="_blank">
                     <button>show</button>
                 </a>
             </div>
             <div class="m">
-                <img src="images/romantic.jpeg" alt="">
+                <img src="romantic.jpeg" alt="">
                 <h4>ROMANTIC</h4>
                 <a href="romantic.html" target="_blank">
                     <button>show</button>
@@ -52,4 +52,5 @@
     </div>
     </div>
 </body>
+
 </html>
