--- a/action.html
+++ b/action.html
@@ -26,28 +26,28 @@
             <div class="cont">
                 <div class="movie">
                 <div class="m">
-                    <img src="images/the covenant.jpg" alt="">
+                    <img src="the covenant.jpg" alt="">
                     <h3>the covenant</h3>
                     <a href="" target="_blank">
                         <button id="over" >play</button>            
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/the gray man.jpg" alt="">
+                    <img src="the gray man.jpg" alt="">
                     <h3>the gray man</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/the out laws.jpg" alt="">
+                    <img src="the out laws.jpg" alt="">
                     <h3>the out laws</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/the women king.jpg" alt="">
+                    <img src="the women king.jpg" alt="">
                     <h3>the women king</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
@@ -56,28 +56,28 @@
                 </div>
                 <div class="movie">
                     <div class="m">
-                        <img src="images/busaba th agent.jpg" alt="">
+                        <img src="busaba th agent.jpg" alt="">
                         <h3>busaba th agent</h3>
                         <a href="" target="_blank">
                             <button id="over" >play</button>            
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/hunter killer.jpg" alt="">
+                        <img src="hunter killer.jpg" alt="">
                         <h3>hunter killer</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>       
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/edge of.jpg" alt="">
+                        <img src="edge of.jpg" alt="">
                         <h3>edge of</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/fighter.jpg" alt="">
+                        <img src="fighter.jpg" alt="">
                         <h3>fighter</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>
@@ -90,4 +90,5 @@
 
     </div>
 </body>
+
 </html>
