--- a/comidy.html
+++ b/comidy.html
@@ -33,21 +33,21 @@
         <h2 class="type2">English films</h2> 
         <div class="movie"> 
             <div class="m">
-                <img src="images/dumb and dumber.jpg" alt="">
+                <img src="dumb and dumber.jpg" alt="">
                 <a href="" target="_blank">
                     <button id="over" >play</button>            
                 </a>
                 <h3>dumb and dumber</h3>
             </div>
             <div class="m">
-                <img src="images/shettyme polishetty.jpg" alt="">
+                <img src="shettyme polishetty.jpg" alt="">
                 <a href="" target="_blank">
                     <button id="over" >play</button>            
                 </a>
                 <h3>shettyme polishetty</h3>
             </div>
             <div class="m">
-                <img src="images/udanchhoo.jpg" alt="">
+                <img src="udanchhoo.jpg" alt="">
                 <a href="show 1.htm" target="_blank">
                     <button>play</button>       
                 </a>
@@ -56,14 +56,14 @@
             </div>
             <div class="movie"> 
                 <div class="m">
-                    <img src="images/snatch.jpg" alt="">
+                    <img src="snatch.jpg" alt="">
                     <a href="" target="_blank">
                         <button id="over" >play</button>            
                     </a>
                     <h3>snatch</h3>
                 </div>
                 <div class="m">
-                    <img src="images/ya mard bechara.jpg" alt="">
+                    <img src="ya mard bechara.jpg" alt="">
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
@@ -76,21 +76,21 @@
         <h2 class="type2">Arabic films</h2> 
         <div class="movie">
             <div class="m">
-                <img src="images/واحد تاني.jpg" alt="">
+                <img src="واحد تاني.jpg" alt="">
                 <a href="" target="_blank">
                     <button id="over" >play</button>            
                 </a>
                 <h3>واحد تاني</h3>
             </div> 
             <div class="m">
-                <img src="images/رغده المتوحشه.jpg" alt="">
+                <img src="رغده المتوحشه.jpg" alt="">
                 <a href="" target="_blank">
                     <button id="over" >play</button>            
                 </a>
                 <h3>رغده المتوحشه</h3>
             </div>
             <div class="m">
-                <img src="images/ثانيه واحده.jpg" alt="">
+                <img src="ثانيه واحده.jpg" alt="">
                 <a href="show 1.htm" target="_blank">
                     <button>play</button>       
                 </a>
@@ -99,14 +99,14 @@
             </div>
             <div class="movie"> 
                 <div class="m">
-                    <img src="images/اللمبي8جيجا.jpg" alt="">
+                    <img src="اللمبي8جيجا.jpg" alt="">
                     <a href="" target="_blank">
                         <button id="over" >play</button>            
                     </a>
                     <h3>اللمبي8جيجا</h3>
                 </div>
                 <div class="m">
-                    <img src="images/يوم ملوش لازمه.jpg" alt="">
+                    <img src="يوم ملوش لازمه.jpg" alt="">
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
@@ -116,4 +116,5 @@
 
     </div>
 </body>
+
 </html>
