--- a/drama.html
+++ b/drama.html
@@ -34,7 +34,7 @@
                             
                             <div class="movies">   
                                 <div class="m">
-                                    <img src="images/11.11.jpg" alt="">
+                                    <img src="11.11.jpg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button id="over" >play</button>            
                                     </a>
@@ -42,7 +42,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/الجريمه.jpeg" alt="">
+                                    <img src="الجريمه.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button id="ver">play</button>       
                                     </a>
@@ -50,7 +50,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/بيت الروابي.jpeg" alt="">
+                                    <img src="بيت الروابي.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -58,7 +58,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/حمله فرعون.jpeg" alt="">
+                                    <img src="حمله فرعون.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -66,7 +66,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/صاحب المقام.jpeg" alt="">
+                                    <img src="صاحب المقام.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -85,7 +85,7 @@
                             </div>
                             <div class="movies">
                                 <div class="m">
-                                    <img src="images/عقده الخواجه.jpeg" alt="">
+                                    <img src="عقده الخواجه.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -93,7 +93,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/فارس.jpeg" alt="">
+                                    <img src="فارس.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -101,7 +101,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/صندوق الدنيا.jpeg" alt="">
+                                    <img src="صندوق الدنيا.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -109,7 +109,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/المحكمه.jpeg" alt="">
+                                    <img src="المحكمه.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -117,7 +117,7 @@
                                     <p>arabic film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/بحبك.jpeg" alt="">
+                                    <img src="بحبك.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="movies">
                                 <div class="m">
-                                    <img src="images/mongol.jpeg" alt="">
+                                    <img src="mongol.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -144,7 +144,7 @@
                                     <p>english film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/planet of the sharks.jpeg" alt="">
+                                    <img src="planet of the sharks.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -152,7 +152,7 @@
                                     <p>english film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/one day.jpeg" alt="">
+                                    <img src="one day.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -160,7 +160,7 @@
                                     <p>english film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/perfect strangers.jpeg" alt="">
+                                    <img src="perfect strangers.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -168,7 +168,7 @@
                                     <p>english film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/nancy drew.jpeg" alt="">
+                                    <img src="nancy drew.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                         <button>play</button>
                                     </a>
@@ -186,7 +186,7 @@
                             </div>
                             <div class="movies">
                                 <div class="m">
-                                    <img src="images/49.jpeg" alt="">
+                                    <img src="49.jpeg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                     <button>play</button>
                                 </a>
@@ -194,7 +194,7 @@
                                     <p>Turkey film.</p>
                                 </div>
                                 <div class="m">
-                                <img src="images/in your dream.jpeg" alt="">
+                                <img src="in your dream.jpeg" alt="">
                                 <a href="show 1.htm" target="_blank">
                                 <button>play</button>
                                 </a>                                    
@@ -202,7 +202,7 @@
                                     <p>Turkey film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/Killers-of-the-Flower-Moon.jpg" alt="">
+                                    <img src="Killers-of-the-Flower-Moon.jpg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                     <button>play</button>
                                     </a>                                        
@@ -210,7 +210,7 @@
                                     <p>Turkey film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/last call istanbul.jpg" alt="">
+                                    <img src="last call istanbul.jpg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                     <button>play</button>
                                     </a>                                        
@@ -218,7 +218,7 @@
                                     <p>Turkey film.</p>
                                 </div>
                                 <div class="m">
-                                    <img src="images/روح الحب و الصراع.jpg" alt="">
+                                    <img src="روح الحب و الصراع.jpg" alt="">
                                     <a href="show 1.htm" target="_blank">
                                     <button>play</button>
                                     </a>
@@ -281,4 +281,5 @@
     changeColorOnHover('button', 'rgb(177, 35, 35)');
 </script>
 </body>
+
 </html>
