--- a/horror.html
+++ b/horror.html
@@ -27,28 +27,28 @@
             <div>
             <div class="movie"> 
                 <div class="m">
-                    <img src="images/annabelle.jpg" alt="">
+                    <img src="annabelle.jpg" alt="">
                     <h3>annabelle</h3>
                     <a href="" target="_blank">
                         <button id="over" >play</button>            
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/hauntingof pendle hill.jpg" alt="">
+                    <img src="hauntingof pendle hill.jpg" alt="">
                     <h3>hauntingof pendle hill</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/smile.jpg" alt="">
+                    <img src="smile.jpg" alt="">
                     <h3>smile</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/the conjuring.jpg" alt="">
+                    <img src="the conjuring.jpg" alt="">
                     <h3>the conjuring</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
@@ -60,28 +60,28 @@
             <div>
             <div class="movie"> 
                 <div class="m">
-                    <img src="images/1920.jpg" alt="">
+                    <img src="1920.jpg" alt="">
                     <h3>1920</h3>
                     <a href="drama.html" target="_blank">
                         <button id="over" >play</button>            
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/cult of chucky.jpg" alt="">
+                    <img src="cult of chucky.jpg" alt="">
                     <h3>cult of chucky</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/veronica.jpg" alt="">
+                    <img src="veronica.jpg" alt="">
                     <h3>veronica</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/malasana.jpg" alt="">
+                    <img src="malasana.jpg" alt="">
                     <h3>malasana</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
@@ -93,28 +93,28 @@
             <div>
             <div class="movie"> 
                 <div class="m">
-                    <img src="images/قبل الاربعين.jpg" alt="">
+                    <img src="قبل الاربعين.jpg" alt="">
                     <h3>قبل الاربعين.</h3>
                     <a href="drama.html" target="_blank">
                         <button>play</button>            
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/شبح النيل.jpg" alt="">
+                    <img src="شبح النيل.jpg" alt="">
                     <h3>شبح النيل.</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>       
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/حشره.jpg" alt="">
+                    <img src="حشره.jpg" alt="">
                     <h3>حشره</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
                     </a>
                 </div>
                 <div class="m">
-                    <img src="images/تشويش.jpg" alt="">
+                    <img src="تشويش.jpg" alt="">
                     <h3>تشويش</h3>
                     <a href="show 1.htm" target="_blank">
                         <button>play</button>
@@ -127,4 +127,5 @@
 
     </div>
 </body>
+
 </html>
