--- a/romantic.html
+++ b/romantic.html
@@ -30,14 +30,14 @@
             <div>
                 <div class="movies">
                     <div class="m">
-                        <img src="images/wedding season.jpg" alt="">
+                        <img src="wedding season.jpg" alt="">
                         <h3 class="h3">wedding season</h3>
                         <a href="" target="_blank">
                             <button id="over">play</button>
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/love at first sight.jpg" alt="">
+                        <img src="love at first sight.jpg" alt="">
                         <h3 class="h3">love at first sight</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>
@@ -46,14 +46,14 @@
                 </div>
                 <div class="movies">
                     <div class="m">
-                        <img src="images/love in tahit.jpg" alt="">
+                        <img src="love in tahit.jpg" alt="">
                         <h3 class="h3">love in tahit</h3>
                         <a href="" target="_blank">
                             <button id="over">play</button>
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/lucky one.jpg" alt="">
+                        <img src="lucky one.jpg" alt="">
                         <h3 class="h3">lucky one</h3>
                         <a href="" target="_blank">
                             <button id="over">play</button>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="m">
-                        <img src="images/the idea of you.jpg" alt="">
+                        <img src="the idea of you.jpg" alt="">
                         <h3 class="h3">the idea of you</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>
@@ -70,14 +70,14 @@
                 </div>
                 <div class="movies">
                     <div class="m">
-                        <img src="images/age adaline.jpg" alt="">
+                        <img src="age adaline.jpg" alt="">
                         <h3 class="h3">age adaline</h3>
                         <a href="" target="_blank">
                             <button id="over">play</button>
                         </a>
                     </div>
                     <div class="m">
-                        <img src="images/fifty shades of grey.jpg" alt="">
+                        <img src="fifty shades of grey.jpg" alt="">
                         <h3 class="h3">fifty shades of grey</h3>
                         <a href="show 1.htm" target="_blank">
                             <button>play</button>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="movies">
                     <div class="m">
-                        <img src="images/black and white ask.jpeg" alt="">
+                        <img src="black and white ask.jpeg" alt="">
                         <h3 class="h3">black and white ask</h3>
                         <a href="" target="_blank">
                             <button id="over">play</button>
@@ -96,5 +96,6 @@
             </div>
         </div>
 </body>
+
 
 </html>
